added scripts to be triggered

--- a/Experimental Notebooks/trial.ipynb
+++ b/Experimental Notebooks/trial.ipynb
@@ -11,6 +11,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tails'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.choice(['Heads', 'Tails'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
